--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;900&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
   <!-- CSS Stylesheets -->
   
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="style.css">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/f790f59406.js" crossorigin="anonymous"></script>
   <!-- Bootstrap Scripts -->
